QandA's are working

--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -70,6 +70,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DatabaseDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Explain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Explain.Designer.cs">
+      <DependentUpon>Explain.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainScreen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Explain.resx">
+      <DependentUpon>Explain.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
