--- a/SpaceGame/SpaceGame.csproj
+++ b/SpaceGame/SpaceGame.csproj
@@ -70,11 +70,23 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DatabaseDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Ending.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ending.Designer.cs">
+      <DependentUpon>Ending.cs</DependentUpon>
+    </Compile>
     <Compile Include="Explain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Explain.Designer.cs">
       <DependentUpon>Explain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HighScore.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HighScore.Designer.cs">
+      <DependentUpon>HighScore.cs</DependentUpon>
     </Compile>
     <Compile Include="Intro.cs">
       <SubType>Form</SubType>
@@ -122,11 +134,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Ending.resx">
+      <DependentUpon>Ending.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Explain.resx">
       <DependentUpon>Explain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Game.resx">
       <DependentUpon>Game.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HighScore.resx">
+      <DependentUpon>HighScore.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Intro.resx">
       <DependentUpon>Intro.cs</DependentUpon>
@@ -180,6 +198,27 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>Database.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\blackboard.jpg" />
+    <None Include="Resources\blackboard.gif" />
+    <None Include="Resources\uproom1000.png" />
+    <None Include="Resources\leftroom1.png" />
+    <None Include="Resources\rocket1004 .png" />
+    <None Include="Resources\rocket4.png" />
+    <None Include="Resources\rocket3.png" />
+    <None Include="Resources\rocket2.png" />
+    <None Include="Resources\rocket11.png" />
+    <None Include="Resources\rocket5.png" />
+    <None Include="Resources\elevator2.png" />
+    <None Include="Resources\chimstand.png" />
+    <None Include="Resources\downroom2.png" />
+    <None Include="Resources\rightroom2.png" />
+    <None Include="Resources\rightroom1.png" />
+    <None Include="Resources\downroom.png" />
+    <None Include="Resources\leftroom.png" />
+    <None Include="Resources\rightroom.png" />
+    <None Include="Resources\uproom.png" />
+    <None Include="Resources\computer.png" />
+    <None Include="Resources\computerpng.png" />
     <None Include="Resources\magel2.gif" />
     <None Include="Resources\magel.gif" />
     <None Include="Resources\back.png" />
